RESOLVED FIXED223481
WebCore::ThreadGlobalData should not initialize fields eagerly
https://bugs.webkit.org/show_bug.cgi?id=223481
Summary WebCore::ThreadGlobalData should not initialize fields eagerly
Yusuke Suzuki
Reported 2021-03-18 14:37:57 PDT
WebCore::ThreadGlobalData should not initialize fields eagerly
Attachments
Patch (7.25 KB, patch)
2021-03-18 14:40 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2021-03-18 14:40:15 PDT
Radar WebKit Bug Importer
Comment 2 2021-03-18 14:41:23 PDT
Chris Dumez
Comment 3 2021-03-18 14:57:37 PDT
Comment on attachment 423660 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=423660&action=review > Source/WebCore/platform/ThreadGlobalData.cpp:118 > +void ThreadGlobalData::initializeCachedResourceRequestInitiators() Why the separate initialize*() functions? Seems we could inline all those.
Yusuke Suzuki
Comment 4 2021-03-18 14:59:47 PDT
Comment on attachment 423660 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=423660&action=review >> Source/WebCore/platform/ThreadGlobalData.cpp:118 >> +void ThreadGlobalData::initializeCachedResourceRequestInitiators() > > Why the separate initialize*() functions? Seems we could inline all those. Because this should be executed rarely, I've extracted it from inlined part of the function.
Yusuke Suzuki
Comment 5 2021-03-18 15:00:27 PDT
Comment on attachment 423660 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=423660&action=review >>> Source/WebCore/platform/ThreadGlobalData.cpp:118 >>> +void ThreadGlobalData::initializeCachedResourceRequestInitiators() >> >> Why the separate initialize*() functions? Seems we could inline all those. > > Because this should be executed rarely, I've extracted it from inlined part of the function. This also allows us not to include CachedResourceRequestInitiators.h EventNames.h QualifiedNameCache.h etc. in the header side.
Chris Dumez
Comment 6 2021-03-18 15:02:26 PDT
Comment on attachment 423660 [details] Patch OK
EWS
Comment 7 2021-03-19 00:54:46 PDT
Committed r274705: <https://commits.webkit.org/r274705> All reviewed patches have been landed. Closing bug and clearing flags on attachment 423660 [details].
Note You need to log in before you can comment on or make changes to this bug.